--- a/inventories/group_vars/mawus_prod.yml
+++ b/inventories/group_vars/mawus_prod.yml
@@ -42,6 +42,7 @@ mawus__google_email_creds_dir: "{{ controller_mawus_env_root }}/google-creds"
 mawus__google_email_creds_file: /google-creds/www_emailer.json
 
 mawus__certs_dir: ""
+mawus__certs_volume: "{{ mawus__env }}-maw-certs"
 mawus__dataprotection_dir: ""
 mawus__upload_dir: ""
 mawus__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
@@ -60,9 +61,6 @@ mawus__podman_pod: prod-maw-pod
 mawus__podman_env_dir: "{{ remote_mawus_root }}/podman-env"
 mawus__podman_image_photos: docker.io/aerisg222/maw-photos:latest
 mawus__podman_image_files: docker.io/aerisg222/maw-files:latest
-mawus__podman_image_auth: docker.io/aerisg222/maw-auth:latest
-mawus__podman_image_api: docker.io/aerisg222/maw-api:latest
-mawus__podman_image_www: docker.io/aerisg222/maw-www:latest
 mawus__podman_image_gateway: docker.io/aerisg222/maw-gateway:latest
 mawus__podman_image_maw_certs: docker.io/aerisg222/maw-certs:latest
 mawus__podman_image_certbot: docker.io/certbot/certbot:latest
@@ -78,22 +76,6 @@ mawus__sql_password: "{{ vault_password_sql_svc_www_maw }}"
 mawus__sql_postgres_password: "{{ vault_password_sql_postgres }}"
 mawus__sql_solr_username: svc_solr
 mawus__sql_solr_password: "{{ vault_password_sql_solr }}"
-
-# auth secrets
-mawus__google_plus_client_id: "{{ vault_google_plus_client_id }}"
-mawus__google_plus_client_secret: "{{ vault_google_plus_client_secret }}"
-mawus__twitter_client_id: "{{ vault_twitter_client_id }}"
-mawus__twitter_client_secret: "{{ vault_twitter_client_secret }}"
-mawus__microsoft_client_id: "{{ vault_microsoft_client_id }}"
-mawus__microsoft_client_secret: "{{ vault_microsoft_client_secret }}"
-mawus__github_client_id: "{{ vault_github_client_id }}"
-mawus__github_client_secret: "{{ vault_github_client_secret }}"
-mawus__www_auth_client_secret: "{{ vault_www_auth_client_secret }}"
-mawus__www_auth_client_id: "{{ vault_www_auth_client_id }}"
-
-# google recaptcha key
-mawus__google_recaptcha_site_key: "{{ vault_google_recaptcha_site_key }}"
-mawus__google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
 
 # google api key (maps / reverse geocode)
 mawus__google_api_key: "{{ vault_google_api_key }}"
@@ -124,3 +106,78 @@ mawus_solr__indexer_container: "{{ mawus__env }}-solr-indexer"
 mawus_solr__indexer_sql_username: "{{ mawus__sql_solr_username }}"
 mawus_solr__indexer_sql_password: "{{ mawus__sql_solr_password }}"
 mawus_solr__indexer_calendar: '00:50:00'
+
+# mawus api settings
+mawus_api__pod: "{{ mawus__podman_pod }}"
+mawus_api__image: "docker.io/aerisg222/maw-api:latest"
+mawus_api__container: "{{ mawus__env }}-maw-api"
+mawus_api__cert_dir: ""
+mawus_api__cert_volume: "{{ mawus__certs_volume }}"
+mawus_api__dataprotection_dir: ""
+mawus_api__dataprotection_volume: "{{ mawus__env }}-maw-api-dataprotection"
+mawus_api__dataprotection_volume_to_migrate: ""
+mawus_api__envfile: "{{ mawus__podman_env_dir }}/maw-api.env"
+mawus_api__envfile_backup: false
+mawus_api__aspnet_env: "{{ mawus__aspnet_env }}"
+mawus_api__pfx: "{{ mawus__pfx_api }}"
+mawus_api__pfx_pwd: ""
+mawus_api__sql_username: "{{ mawus__sql_username }}"
+mawus_api__sql_password: "{{ mawus__sql_password }}"
+mawus_api__upload_dir: ""
+mawus_api__upload_volume: "{{ mawus__env }}-maw-upload"
+mawus_api__upload_volume_to_migrate: ""
+mawus_api__asset_dir_images: "{{ mawus__asset_dir_images }}"
+
+# mawus auth settings
+mawus_auth__pod: "{{ mawus__podman_pod }}"
+mawus_auth__image: "docker.io/aerisg222/maw-auth:latest"
+mawus_auth__container: "{{ mawus__env }}-maw-auth"
+mawus_auth__cert_dir: ""
+mawus_auth__cert_volume: "{{ mawus__certs_volume }}"
+mawus_auth__dataprotection_dir: ""
+mawus_auth__dataprotection_volume: "{{ mawus__env }}-maw-auth-dataprotection"
+mawus_auth__dataprotection_volume_to_migrate: ""
+mawus_auth__envfile: "{{ mawus__podman_env_dir }}/maw-auth.env"
+mawus_auth__envfile_backup: false
+mawus_auth__aspnet_env: "{{ mawus__aspnet_env }}"
+mawus_auth__google_creds_volume: "{{ mawus__google_creds_volume }}"
+mawus_auth__google_email_creds_file: "{{ mawus__google_email_creds_file }}"
+mawus_auth__pfx: "{{ mawus__pfx_auth }}"
+mawus_auth__pfx_pwd:
+mawus_auth__sql_username: "{{ mawus__sql_username }}"
+mawus_auth__sql_password: "{{ mawus__sql_password }}"
+mawus_auth__www_auth_client_secret: "{{ vault_www_auth_client_secret }}"
+mawus_auth__google_plus_client_id: "{{ vault_google_plus_client_id }}"
+mawus_auth__google_plus_client_secret: "{{ vault_google_plus_client_secret }}"
+mawus_auth__twitter_client_id: "{{ vault_twitter_client_id }}"
+mawus_auth__twitter_client_secret: "{{ vault_twitter_client_secret }}"
+mawus_auth__microsoft_client_id: "{{ vault_microsoft_client_id }}"
+mawus_auth__microsoft_client_secret: "{{ vault_microsoft_client_secret }}"
+mawus_auth__github_client_id: "{{ vault_github_client_id }}"
+mawus_auth__github_client_secret: "{{ vault_github_client_secret }}"
+mawus_auth__pfx_signing: "{{ mawus__pfx_signing }}"
+
+# mawus www settings
+mawus_www__pod: "{{ mawus__podman_pod }}"
+mawus_www__image: "docker.io/aerisg222/maw-www:latest"
+mawus_www__container: "{{ mawus__env }}-maw-www"
+mawus_www__cert_dir: ""
+mawus_www__cert_volume: "{{ mawus__certs_volume }}"
+mawus_www__dataprotection_dir: ""
+mawus_www__dataprotection_volume: "{{ mawus__env }}-maw-www-dataprotection"
+mawus_www__dataprotection_volume_to_migrate: ""
+mawus_www__envfile: "{{ mawus__podman_env_dir }}/maw-www.env"
+mawus_www__envfile_backup: false
+mawus_www__pfx: "{{ mawus__pfx_www }}"
+mawus_www__pfx_pwd:
+mawus_www__aspnet_env: "{{ mawus__aspnet_env }}"
+mawus_www__google_creds_volume: "{{ mawus__google_creds_volume }}"
+mawus_www__google_email_creds_file: "{{ mawus__google_email_creds_file }}"
+mawus_www__sql_username: "{{ mawus__sql_username }}"
+mawus_www__sql_password: "{{ mawus__sql_password }}"
+mawus_www__auth_client_id: "{{ vault_www_auth_client_id }}"
+mawus_www__auth_client_secret: "{{ vault_www_auth_client_secret }}"
+mawus_www__google_recaptcha_site_key: "{{ vault_google_recaptcha_site_key }}"
+mawus_www__google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
+mawus_www__asset_dir_images: "{{ mawus__asset_dir_images }}"
+mawus_www__asset_dir_movies: "{{ mawus__asset_dir_movies }}"
