--- a/roles/maw_auth/tasks/main.yml
+++ b/roles/maw_auth/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: prepare auth environment file
   ansible.builtin.include_role:
-    name: mawus_envfile
+    name: maw_envfile
   vars:
     mawus_env__template: maw-auth.env.j2
     mawus_env__path: "{{ mawus_auth__envfile }}"
