--- a/roles/maw_www/tasks/main.yml
+++ b/roles/maw_www/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: prepare www environment file
   ansible.builtin.include_role:
-    name: mawus_envfile
+    name: maw_envfile
   vars:
     mawus_env__template: maw-www.env.j2
     mawus_env__path: "{{ mawus_www__envfile }}"
