--- a/playbook_maw_test.yml
+++ b/playbook_maw_test.yml
@@ -1,6 +1,6 @@
 ---
 - name: Configure mikeandwan.us test environment
-  hosts: mawus_test
+  hosts: maw_test
   vars_files:
     - "{{ controller_secrets_file }}"
 
