--- a/inventories/group_vars/maw_test.yml
+++ b/inventories/group_vars/maw_test.yml
@@ -1,48 +1,47 @@
 controller_home_dir: "{{ lookup('env', 'HOME') }}"
 controller_mawus_root: "{{ controller_home_dir }}/ansible/apps/mikeandwan.us"
-controller_mawus_env_root: "{{ controller_mawus_root }}/dev"
+controller_mawus_env_root: "{{ controller_mawus_root }}/test"
 controller_secrets_file: "{{ controller_mawus_env_root }}/ansible/secret-vars.yml"
 
 remote_home_dir: "{{ controller_home_dir }}"
-remote_mawus_root: "{{ remote_home_dir }}/mawus_dev"
-
-# git root
-git_root: "{{ controller_home_dir }}/git"
+remote_mawus_root: "{{ remote_home_dir }}/maw_test"
 
 # asset directory root
 asset_dir_root: /srv/www/website_assets
 
-# mawus
+# shared mawus settings
 mawus__username: "{{ ansible_user_id }}"
-mawus__env: dev
-mawus__aspnet_env: development
+mawus__env: test
+mawus__aspnet_env: test
 mawus__bash_profile: "{{ controller_home_dir }}/.bash_profile"
 mawus__allow_low_ports: false
 
-mawus__fqdn_naked: dev.mikeandwan.us
-mawus__fqdn_api: dev.api.mikeandwan.us
-mawus__fqdn_auth: dev.auth.mikeandwan.us
-mawus__fqdn_files: dev.files.mikeandwan.us
-mawus__fqdn_photos: dev.photos.mikeandwan.us
-mawus__fqdn_www: dev.www.mikeandwan.us
+mawus__fqdn_naked: test.mikeandwan.us
+mawus__fqdn_api: test.api.mikeandwan.us
+mawus__fqdn_auth: test.auth.mikeandwan.us
+mawus__fqdn_files: test.files.mikeandwan.us
+mawus__fqdn_photos: test.photos.mikeandwan.us
+mawus__fqdn_www: test.www.mikeandwan.us
 
-mawus__pfx_api: "{{ remote_mawus_root }}/certs/api/api.pfx"
-mawus__pfx_auth: "{{ remote_mawus_root }}/certs/auth/auth.pfx"
-mawus__pfx_signing: "{{ remote_mawus_root }}/certs/signing/signing.pfx"
-mawus__pfx_www: "{{ remote_mawus_root }}/certs/www/www.pfx"
+mawus__pfx_api: /certs/api/api.pfx
+mawus__pfx_auth: /certs/auth/auth.pfx
+mawus__pfx_signing: /certs/signing/signing.pfx
+mawus__pfx_www: /certs/www/www.pfx
 
 # to be set by cert process
 mawus__pfx_pwd_api:
 mawus__pfx_pwd_auth:
 mawus__pfx_pwd_www:
 
-mawus__gdrive_creds_dir:  # not needed for dev
+mawus__gdrive_creds_dir:  # not needed for test
 mawus__google_email_creds_dir: "{{ controller_mawus_env_root }}/google-creds"
-mawus__google_email_creds_file: "{{ controller_mawus_env_root }}/google-creds/www_emailer.json"
-mawus__google_creds_volume: "{{ mawus__env }}-maw-google-creds"
+mawus__google_email_creds_file: /google-creds/www_emailer.json
 
-mawus__certs_dir: "{{ remote_mawus_root }}/certs"
-mawus__dataprotection_dir: "{{ remote_mawus_root }}/dataprotection"
+# certs written to dir to simplify adding ca cert to host
+mawus__certs_dir: ""
+mawus__certs_volume: "{{ mawus__env }}-maw-certs"
+mawus__dataprotection_dir: ""
+mawus__upload_dir: ""
 mawus__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
 mawus__asset_dir_images: "{{ asset_dir_root }}/images"
 mawus__asset_dir_movies: "{{ asset_dir_root }}/movies"
@@ -53,21 +52,20 @@ mawus__pg_backup_idsrv: idsrv.20220307.dump
 mawus__pg_backup_www: maw_website.20220307.dump
 
 mawus__version_postgres: 14
-mawus__podman_image_postgres: docker.io/postgres:14-alpine
+mawus__podman_image_postgres: "docker.io/postgres:{{ mawus__version_postgres }}-alpine"
 
-mawus__podman_pod: dev-maw-pod
+mawus__podman_pod: test-maw-pod
 mawus__podman_env_dir: "{{ remote_mawus_root }}/podman-env"
-mawus__podman_image_photos: ""
-mawus__podman_image_files: ""
-mawus__podman_image_gateway: ""
+mawus__podman_image_photos: localhost/maw-photos-test
+mawus__podman_image_files: localhost/maw-files-test
+mawus__podman_image_gateway: localhost/maw-gateway-test
 mawus__podman_image_maw_certs: docker.io/aerisg222/maw-certs:latest
-mawus__podman_image_certbot: docker.io/certbot/certbot:latest
-mawus__podman_image_reverse_geocode: ""
+mawus__podman_image_certbot: ""
+mawus__podman_image_reverse_geocode: docker.io/aerisg222/maw-reverse-geocode:latest
 mawus__podman_image_gdrive: ""
 mawus__podman_publish_ports:
-  - 8983:8983  # solr
-  - 5432:5432  # postgres
-  - 6379:6379  # redis
+  - 8080:8080
+  - 8443:8443
 
 # postgres sql accounts for site
 mawus__sql_username: svc_www_maw
@@ -107,13 +105,13 @@ mawus_solr__indexer_sql_password: "{{ mawus__sql_solr_password }}"
 mawus_solr__indexer_calendar: '00:50:00'
 
 # mawus api settings
-mawus_api__pod: ""
-mawus_api__image: ""
-mawus_api__container: ""
-mawus_api__cert_dir: "{{ mawus__certs_dir }}"
-mawus_api__cert_volume: ""
-mawus_api__dataprotection_dir: "{{ remote_mawus_root }}/dataprotection/api"
-mawus_api__dataprotection_volume: ""
+mawus_api__pod: "{{ mawus__podman_pod }}"
+mawus_api__image: "localhost/maw-api-test"
+mawus_api__container: "{{ mawus__env }}-maw-api"
+mawus_api__cert_dir: ""
+mawus_api__cert_volume: "{{ mawus__certs_volume }}"
+mawus_api__dataprotection_dir: ""
+mawus_api__dataprotection_volume: "{{ mawus__env }}-maw-api-dataprotection"
 mawus_api__dataprotection_volume_to_migrate: ""
 mawus_api__envfile: "{{ mawus__podman_env_dir }}/maw-api.env"
 mawus_api__envfile_backup: false
@@ -122,25 +120,25 @@ mawus_api__pfx: "{{ mawus__pfx_api }}"
 mawus_api__pfx_pwd: ""
 mawus_api__sql_username: "{{ mawus__sql_username }}"
 mawus_api__sql_password: "{{ mawus__sql_password }}"
-mawus_api__upload_dir: "{{ mawus__upload_dir }}"
-mawus_api__upload_volume: ""
+mawus_api__upload_dir: ""
+mawus_api__upload_volume: "{{ mawus__env }}-maw-upload"
 mawus_api__upload_volume_to_migrate: ""
 mawus_api__asset_dir_images: "{{ mawus__asset_dir_images }}"
 
 # mawus auth settings
-mawus_auth__pod: ""
-mawus_auth__image: ""
-mawus_auth__container: ""
-mawus_auth__cert_dir: "{{ mawus__certs_dir }}"
-mawus_auth__cert_volume: ""
-mawus_auth__dataprotection_dir: "{{ remote_mawus_root }}/dataprotection/auth"
-mawus_auth__dataprotection_volume: ""
+mawus_auth__pod: "{{ mawus__podman_pod }}"
+mawus_auth__image: "localhost/maw-auth-test"
+mawus_auth__container: "{{ mawus__env }}-maw-auth"
+mawus_auth__cert_dir: ""
+mawus_auth__cert_volume: "{{ mawus__certs_volume }}"
+mawus_auth__dataprotection_dir: ""
+mawus_auth__dataprotection_volume: "{{ mawus__env }}-maw-auth-dataprotection"
 mawus_auth__dataprotection_volume_to_migrate: ""
 mawus_auth__envfile: "{{ mawus__podman_env_dir }}/maw-auth.env"
 mawus_auth__envfile_backup: false
 mawus_auth__aspnet_env: "{{ mawus__aspnet_env }}"
-mawus_auth__google_creds_volume: ""
-mawus_auth__google_email_creds_file:
+mawus_auth__google_creds_volume: "{{ mawus__google_creds_volume }}"
+mawus_auth__google_email_creds_file: "{{ mawus__google_email_creds_file }}"
 mawus_auth__pfx: "{{ mawus__pfx_auth }}"
 mawus_auth__pfx_pwd:
 mawus_auth__sql_username: "{{ mawus__sql_username }}"
@@ -157,20 +155,20 @@ mawus_auth__github_client_secret: "{{ vault_github_client_secret }}"
 mawus_auth__pfx_signing: "{{ mawus__pfx_signing }}"
 
 # mawus www settings
-mawus_www__pod: ""
-mawus_www__image: ""
-mawus_www__container: ""
-mawus_www__cert_dir: "{{ mawus__certs_dir }}"
-mawus_www__cert_volume: ""
-mawus_www__dataprotection_dir: "{{ remote_mawus_root }}/dataprotection/www"
-mawus_www__dataprotection_volume: ""
+mawus_www__pod: "{{ mawus__podman_pod }}"
+mawus_www__image: "localhost/maw-www-test"
+mawus_www__container: "{{ mawus__env }}-maw-www"
+mawus_www__cert_dir: ""
+mawus_www__cert_volume: "{{ mawus__certs_volume }}"
+mawus_www__dataprotection_dir: ""
+mawus_www__dataprotection_volume: "{{ mawus__env }}-maw-www-dataprotection"
 mawus_www__dataprotection_volume_to_migrate: ""
 mawus_www__envfile: "{{ mawus__podman_env_dir }}/maw-www.env"
 mawus_www__envfile_backup: false
 mawus_www__pfx: "{{ mawus__pfx_www }}"
 mawus_www__pfx_pwd:
 mawus_www__aspnet_env: "{{ mawus__aspnet_env }}"
-mawus_www__google_creds_volume: ""
+mawus_www__google_creds_volume: "{{ mawus__google_creds_volume }}"
 mawus_www__google_email_creds_file: "{{ mawus__google_email_creds_file }}"
 mawus_www__sql_username: "{{ mawus__sql_username }}"
 mawus_www__sql_password: "{{ mawus__sql_password }}"
